# station-master-collector

./: .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
collector/: __init__.py  config.py  main.py  plugin_manager.py  scheduler.py  syslog_parser.py  syslog_server.py  syslog_transport.py
collector/core/: __init__.py  config.py  db_loader.py  heartbeat.py  plugin_manager.py  remote_logging.py  scheduler.py  snmp_trap_receiver.py  transport.py
collector/plugins/: __init__.py  base.py
collector/plugins/axia/: __init__.py
collector/plugins/nautel/: __init__.py
collector/plugins/omnia/: __init__.py
collector/plugins/omnia_9sg/: __init__.py
collector/plugins/omnia_mpx/: __init__.py
collector/plugins/omnia_mpx_decoder/: __init__.py
collector/plugins/omnia_volt/: __init__.py
collector/plugins/zetta/: __init__.py
